fix spacing in product information and style ellipsis

--- a/src/app/business/order/views/order-detail/components/product-information/components/product-detail/product-detail.component.scss
+++ b/src/app/business/order/views/order-detail/components/product-information/components/product-detail/product-detail.component.scss
@@ -15,6 +15,9 @@
 
   .name {
     margin-top: 2px !important;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
